--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,22 +1,50 @@
-.board {
-  width: 600px;
-  border: 1px solid black;
-  display: inline-block;
-  .row {
-    width: 100%;
-    .cell {
-      height: 50px;
-      line-height: 50px;
-      text-align: center;
-      display: inline-block;
-      width: 20%;
-      float: left;
-    }
-  }
-}
-
 .board-container{
+  position: relative;
   width: 600px;
   display: block;
   margin: auto;
+  .board {
+    float: left;
+    width: 600px;
+    border: 1px solid black;
+    border-bottom: none;
+    display: inline-block;
+    .row {
+      width: 100%;
+      .cell {
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        display: inline-block;
+        width: 20%;
+        float: left;
+      }
+    }
+  }
+  form {
+    width: 100%;
+    float: left;
+    border: 1px solid black;
+    input {
+      width: 100%;
+      max-width: 100%;
+      border: none;
+      text-align: center;
+      padding: 0;
+      line-height: 3rem;
+      &:focus {
+        outline: none;
+      }
+    }
+  }
+}
+.site-title {
+  text-align: center;
+}
+#status-message {
+  position: absolute;
+  width: 100%;
+  display: inline-block;
+  top: 150px;
+  text-align: center;
 }
