--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,9 +10,10 @@ body {
   display: block;
   margin: auto;
   .board {
+    background-color: black;
     float: left;
     width: 600px;
-    border: 1px solid black;
+    border: 5px solid rgb(46, 204, 113);
     border-bottom: none;
     display: inline-block;
     .row {
@@ -23,6 +24,7 @@ body {
         text-align: center;
         display: inline-block;
         width: 20%;
+        color: white;
         float: left;
       }
     }
@@ -30,8 +32,9 @@ body {
   form {
     width: 100%;
     float: left;
-    border: 1px solid black;
+    border: 5px solid rgb(46, 204, 113);
     input {
+      background-color: #131313;
       width: 100%;
       max-width: 100%;
       border: none;
@@ -46,6 +49,7 @@ body {
 }
 .site-title {
   text-align: center;
+  margin: 10px;
   font-size: 4rem;
   font-family: 'Audiowide';
   text-transform:uppercase;
@@ -54,11 +58,18 @@ body {
    0 2px 0 rgb(36, 171, 93) ,
    0 3px 0 rgb(21, 156, 172) ,
    0 4px 0 rgb(18, 153, 169) ,
-   0 5px 0 rgb(3 , 138, 154)
+   0 5px 0 rgb(3 , 138, 154);
 
 
 }
 #status-message {
+  font-size: 2rem;
+  color: rgb(46, 204, 113);
+  text-shadow: 0 1px 0 rgb(39, 174, 96),
+   0 2px 0 rgb(36, 171, 93) ,
+   0 3px 0 rgb(21, 156, 172) ,
+   0 4px 0 rgb(18, 153, 169) ,
+   0 5px 0 rgb(3 , 138, 154);
   font-family: 'Audiowide';
   position: absolute;
   width: 100%;
@@ -66,4 +77,7 @@ body {
   top: 150px;
   text-align: center;
   text-transform: uppercase;
+  h3 {
+    margin-bottom: 0;
+  }
 }
