--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,6 @@
-@import url(https://fonts.googleapis.com/css?family=Press+Start+2P);
 @import url(https://fonts.googleapis.com/css?family=Audiowide);
+@import url(https://fonts.googleapis.com/css?family=Ropa+Sans);
+
 body {
   background-color: black;
 }
@@ -27,6 +28,8 @@ body {
     .row {
       width: 100%;
       .cell {
+        font-family: 'Ropa Sans';
+        text-transform: uppercase;
         height: 50px;
         line-height: 50px;
         text-align: center;
@@ -43,6 +46,10 @@ body {
     float: left;
     border: 5px solid rgb(46, 204, 113);
     input {
+      font-family: 'Ropa Sans';
+      text-transform: uppercase;
+      font-size: 1rem;
+      color: #fff;
       background-color: #131313;
       width: 100%;
       max-width: 100%;
@@ -57,29 +64,25 @@ body {
   }
 }
 .site-title {
+  @include three-d-text(39, 174, 190)
   text-align: center;
   margin: 10px;
   font-size: 4rem;
   font-family: 'Audiowide';
   text-transform:uppercase;
   color: rgb(46, 204, 113);
-  text-shadow: 0 1px 0 rgb(39, 174, 96),
-   0 2px 0 rgb(36, 171, 93) ,
-   0 3px 0 rgb(21, 156, 172) ,
-   0 4px 0 rgb(18, 153, 169) ,
-   0 5px 0 rgb(3 , 138, 154);
 
 
 }
 #status-message {
-  @include three-d-text(39, 174, 96)
-  font-size: 2rem;
+  @include three-d-text(39, 174, 190)
+  font-size: 2.3rem;
   color: rgb(46, 204, 113);
   font-family: 'Audiowide';
   position: absolute;
   width: 100%;
   display: inline-block;
-  top: 150px;
+  top: 135px;
   text-align: center;
   text-transform: uppercase;
   h3 {
