--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,7 +65,7 @@ body {
         height: 75px;
         line-height: 70px;
         text-align: center;
-        font-size: .8rem;
+        font-size: 1rem;
         text-shadow: 1px 1px 1px black;
         display: inline-block;
         width: 20%;
