--- a/styles/main.scss
+++ b/styles/main.scss
@@ -66,10 +66,9 @@ body {
         line-height: 70px;
         text-align: center;
         font-size: 1rem;
-        text-shadow: 1px 1px 1px black;
         display: inline-block;
         width: 20%;
-        color: white;
+        color: black;
         float: left;
       }
       .invader {
