--- a/styles/main.scss
+++ b/styles/main.scss
@@ -65,7 +65,7 @@ body {
         height: 75px;
         line-height: 70px;
         text-align: center;
-        font-size: 1rem;
+        font-size: 1.2rem;
         display: inline-block;
         width: 20%;
         color: black;
@@ -131,6 +131,11 @@ body {
   text-transform: uppercase;
   h3 {
     margin-bottom: 0;
+  }
+  h4{
+    margin: 0;
+  line-height: 3rem;
+  font-size: 2rem;
   }
   button {
     font-family: 'Audiowide';
