--- a/styles/main.scss
+++ b/styles/main.scss
@@ -86,9 +86,13 @@ body {
     @include placeholder {
         color: white;
         font-weight:100;
-        opacity: .8;
+        opacity: .1;
+        &:active {
+          opacity: 0;
+        }
     }
     input {
+
       font-family: 'Ropa Sans';
       text-transform: uppercase;
       font-size: 1rem;
@@ -102,6 +106,7 @@ body {
       line-height: 3rem;
       &:focus {
         outline: none;
+
       }
     }
   }
