--- a/styles/main.scss
+++ b/styles/main.scss
@@ -97,7 +97,7 @@ body {
 
       font-family: 'Ropa Sans';
       text-transform: uppercase;
-      font-size: 1rem;
+      font-size: 2rem;
       color: #fff;
       background-color: #131313;
       width: 100%;
@@ -125,7 +125,7 @@ body {
     @include three-d-text-hover(39, 174, 190)
   }
 }
-#status-message {
+.status-message {
   @include three-d-text(39, 174, 190)
   font-size: 2.3rem;
   color: rgb(46, 204, 113);
@@ -141,8 +141,8 @@ body {
   }
   h4{
     margin: 0;
-  line-height: 3rem;
-  font-size: 2rem;
+    line-height: 3rem;
+    font-size: 2rem;
   }
   button {
     font-family: 'Audiowide';
