--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,11 +30,12 @@
    transition: all 300ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
+
 @mixin placeholder {
-  ::-webkit-input-placeholder {@content}
-  :-moz-placeholder           {@content}
-  ::-moz-placeholder          {@content}
-  :-ms-input-placeholder      {@content}
+  &::-webkit-input-placeholder {@content}
+  &:-moz-placeholder           {@content}
+  &::-moz-placeholder          {@content}
+  &:-ms-input-placeholder      {@content}
 }
 
 
@@ -43,7 +44,6 @@ body {
   background-color: black;
 
 }
-
 
 
 .board-container{
@@ -85,16 +85,8 @@ body {
     width: 100%;
     float: left;
     border: 5px solid rgb(46, 204, 113);
-    @include placeholder {
-        color: white;
-        font-weight:100;
-        opacity: .1;
-        &:active {
-          opacity: 0;
-        }
-    }
-    input {
 
+    input {
       font-family: 'Ropa Sans';
       text-transform: uppercase;
       font-size: 2rem;
@@ -106,9 +98,14 @@ body {
       text-align: center;
       padding: 0;
       line-height: 3rem;
+      @include placeholder {
+            color: white;
+          }
       &:focus {
         outline: none;
-
+        @include placeholder {
+              color: transparent;
+        }
       }
     }
   }
